--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
-  <title>React App</title>
+  <title>Manas' Portfolio</title>
 </head>
 
 <body>
